tests/ui/trait_definition/fail/cannot-apply-to-struct.rs
#[openbrush::trait_definition]
pub struct NotTrait;

fn main() {}